# ccswitch

./: .gitignore  Cargo.toml  README.md  cliff.toml  defaults.toml  flake.nix
.github/workflows/: release.yml
assets/: ccs-proxy.service
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs
src/core/: config.rs  env.rs  import.rs  mod.rs  models.rs  switcher.rs  sync.rs
src/db/: connection.rs  importer.rs  migrations.rs  mod.rs  providers.rs  sessions.rs  settings.rs  usage.rs
src/proxy/: metrics.rs  mod.rs  router.rs  server.rs  service.rs  transform.rs
src/tui/: app.rs  file_watcher.rs  lang.rs  mod.rs  theme.rs
src/tui/tabs/: history.rs  mod.rs  providers.rs  settings.rs  usage.rs
src/tui/tabs/providers/: form.rs  mod.rs
src/tui/tabs/usage/: chart.rs  mod.rs  scan.rs
src/tui/widgets/: app_bar.rs  bar_chart.rs  detail_panel.rs  mod.rs  provider_tree.rs  session_detail.rs  shared.rs  sidebar.rs  status_bar.rs
tests/: config_tests.rs  integration.rs  unit.rs
tests/fixtures/: defaults.toml
tests/integration/: config_tests.rs  switcher_tests.rs
tests/unit/: db_tests.rs  models_tests.rs
