[package]
name = "ccswitch"
version = "1.8.1"
edition = "2021"
rust-version = "1.80"
license = "GPL-3.0"

[[bin]]
name = "ccs"
path = "src/main.rs"

[lib]
name = "ccswitch"
path = "src/lib.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4.5", features = [ "derive" ] }
clap_complete = "4.5"
clap_mangen = "0.2"
dialoguer = "0.11"

# HTTP proxy
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = [ "stream", "json", "rustls-tls" ] }
tokio = { version = "1", features = [ "full" ] }
tokio-stream = "0.1"
bytes = "1"
futures-core = "0.3"

# Database
rusqlite = { version = "0.31", features = [ "bundled" ] }

# Standard directories (cross-platform)
dirs = "5"

# Config & serialization
toml = "0.8"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

# Dates/times
chrono = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"


# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
name = "ccswitch"
maintainer = "pomeluce <pomeluce+ccswitch@outlook.com>"
extended-description = "Claude Code model configuration manager"
section = "utils"
priority = "optional"
assets = [
  [
    "target/release/ccs",
    "usr/bin/ccs",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/ccswitch/README.md",
    "644",
  ],
  [
    "LICENSE",
    "usr/share/doc/ccswitch/LICENSE",
    "644",
  ],
  [
    "assets/ccs-proxy.service",
    "usr/lib/systemd/user/ccs-proxy.service",
    "644",
  ],
]
depends = ""

[package.metadata.generate-rpm]
name = "ccswitch"
license = "GPL-3.0"
summary = "Claude Code model configuration manager"
assets = [
  { source = "target/release/ccs", dest = "/usr/bin/ccs", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/ccswitch/README.md", mode = "644" },
  { source = "LICENSE", dest = "/usr/share/doc/ccswitch/LICENSE", mode = "644" },
  { source = "assets/ccs-proxy.service", dest = "/usr/lib/systemd/user/ccs-proxy.service", mode = "644" },
]
